--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@ a:hover {
 
 .wrapperForm {
   width: 360px;
-  //max-width: 600px;
+  height: 568px;
   padding: 24px 48px 32px 48px;
   margin: 0 auto;
   text-align: center;
@@ -105,7 +105,6 @@ a:hover {
 .form__separator {
   position: relative;
   margin-bottom: 14px;
-  //width: 100%;
   @include font ("Inter", "400", "18px");
   color: #8C93A3;
   line-height: 28px;
@@ -164,10 +163,11 @@ a:hover {
 }
 
 .form__error-info {
-  //position: absolute;
-  //right: 0;
+  position: relative;
+  top: -20px;
   @include font ("Inter", "400", "12px");
   color: #E1485B;
+  text-align: right;
 }
 
 .error {
@@ -207,7 +207,6 @@ a:hover {
   width: 0;
 }
 
-/* Create a custom checkbox */
 .checkmark {
   position: absolute;
   top: 0;
@@ -217,30 +216,22 @@ a:hover {
   border: 2px solid #B0BACA;
   border-radius: 3px;
 }
-/* On mouse-over, add a grey background color */
-//.form-text:hover input ~ .checkmark {
-//  background-color: #ccc;
-//}
 
-/* When the checkbox is checked, add a blue background */
 .form-text input:checked ~ .checkmark {
   background-color: #3EBF8A;
   border: none;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
-/* Show the checkmark when checked */
 .form-text input:checked ~ .checkmark:after {
   display: block;
 }
 
-/* Style the checkmark/indicator */
 .form-text .checkmark:after {
   left: 8px;
   top: 4px;
@@ -252,13 +243,6 @@ a:hover {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
-//.form-remember {
-//  width: 29px;
-//  height: 20px;
-//  border: 1px solid #E2E9F3;
-//  border-radius: 6px;
-//}
 
 .form-submit {
   height: 48px;
