--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,6 @@
 $color-text :#2B3151;
 $color-link: #2856AE;
 
-
 body,
 h1,
 h2,
@@ -20,6 +19,10 @@ button,
 input {
   margin: 0;
   padding: 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 * {
@@ -180,10 +183,6 @@ a:hover {
   border: 1px solid #B0BACA;
 }
 
-.button {
-  cursor: pointer;
-}
-
 .form-text {
   display: block;
   margin: 26px 0;
@@ -211,8 +210,8 @@ a:hover {
   position: absolute;
   top: 0;
   left: 0;
-  height: 24px;
-  width: 24px;
+  height: 23px;
+  width: 23px;
   border: 2px solid #B0BACA;
   border-radius: 3px;
 }
